examples/negative/parse_errors/L1/while_no_do.ob
MODULE WhileNoDo;

VAR i,x,y: INTEGER;

BEGIN
  x := 2;
  y := 3;
  i := 0;
  WHILE i < 10
    x := x * y;
    y := y * x;
    i := i + 1
  END
END WhileNoDo.
